--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=picbucket
 DB_SSLMODE=disable
+
+# Server env vars
+SERVER_URL=http://localhost:8080
+SERVER_PORT=8080
